...
                            OutlinedTextField(
                                value = searchText,
                                onValueChange = {
                                    searchText = it
                                    audioViewModel.updateSearchText(it.text)
                                },
                                placeholder = { Text("Search Sounds") },
                                singleLine = true,
                                shape = RoundedCornerShape((fileNameFontSize / 2).dp),
                                trailingIcon = {
                                    if (searchText.text.isNotEmpty()) {
                                        IconButton(onClick = {
                                            searchText = TextFieldValue()
...
