...

    override fun deleteAllRecords() {
        TODO("Not yet implemented")
    }

    override suspend fun syncFolderandDatabase() {
        val file = File("/storage/emulated/0/Music/testSong/trimmed_tomatoes.wav")
        val dur = getAudioDuration(file)
        val fSizeMB = file.length().toDouble() / (1024 * 1024)
        val lastModDate = SimpleDateFormat("dd-MM-yyyy").format(Date())
        Log.d("testfile", file.name)
        Log.d("testfile", file.absolutePath)
        Log.d("testfile", dur.toString())
...
