...
    Surface(
        color = MaterialTheme.colorScheme.primaryContainer.copy(alpha = 0.6f),
        shape = RoundedCornerShape(16.dp),
        modifier = Modifier
            .fillMaxWidth()
            .padding(16.dp, 8.dp, 16.dp, 8.dp)
            .testTag("SoundCard")
            .pointerInput(Unit) {
                detectTapGestures(
                    onLongPress = { },
                    onTap = { onClick() }
                )
            }
...
